btrbk-0.25.1

  * Support for btrfs-progs v4.12: fix parsing of "btrfs sub show"
    output, which now prints relative paths (close #171).
  * Add "stream_buffer" configuration option (close #154).
  * Bugfix: accept "no" for "transaction_log", "transaction_syslog"
    and "lockfile" configuration options.
  * Show "up-to-date" status for backups in "stats" command.
  * Show "correlated" status instead of "orphaned" in "stats" command.
  * Check source subvolumes for readonly and received_uuid flags, and
    abort if one of them is set.

btrbk-0.25.0

  * MIGRATION
    - If you call ssh_filter_btrbk.sh with "--sudo" option, make sure
      to set "backend btrfs-progs-sudo" in btrbk.conf for this host.
    - If "rate_limit" is enabled, update ssh_filter_btrbk.sh on remote
      source hosts, and make sure the "pv" command is available there.
  * Allow converting backup disks to source disks (close #114).
  * Add "backend btrfs-progs-sudo" configuration option (close #115).
  * Show aggregate "size" and "used" for "usage" action (close #119).
  * Add "raw_target_split" configuration option (close #125).
  * Allow trailing comments in btrbk.conf (close #129).
  * Bugfix: rate limiting must be done after compression (close #134).
  * raw_target_encrypt: Always set "gpg --no-random-seed-file":
    prevents creation of "~/.gnupg/random_seed" with slight perfomance
    penalty.

btrbk-0.24.0

  * MIGRATION
    - update ssh_filter_btrbk.sh on remote hosts if "stream_compress"
      is enabled. Also add "--compress" option to ssh_filter_btrbk.sh
      invocation if "stream_compress" is enabled.
  * Add "stream_compress" configuration option.
  * Perform extra metadata check on target subvolume after "btrfs
    receive" (adds an additional call to "btrfs subvolume show").
  * Bugfix: Replace "realpath" with "readlink" in ssh_filter_btrbk.sh
  * Add "raw_target_block_size" configuration option (close #105).
  * Add "backend" configuration option (experimental).